--- a/it-pagalbos-biletai/Dockerfile
+++ b/it-pagalbos-biletai/Dockerfile
@@ -1,7 +1,5 @@
-# Use official PHP 8.3 image with FPM
 FROM php:8.3-fpm
 
-# Install system dependencies
 RUN apt-get update && apt-get install -y \
     libpng-dev \
     libjpeg-dev \
@@ -13,19 +11,4 @@ RUN apt-get update && apt-get install -y \
     libonig-dev \
     libxml2-dev \
     && docker-php-ext-configure gd --with-freetype --with-jpeg \
-    && docker-php-ext-install gd pdo pdo_mysql mbstring tokenizer xml
-
-# Install Composer
-COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
-
-# Set working directory
-WORKDIR /var/www/html
-
-# Copy project files
-COPY . .
-
-# Install PHP dependencies
-RUN composer install --optimize-autoloader --no-scripts --no-interaction
-
-# Expose Railway port (Railway sets $PORT automatically)
-CMD ["php", "-S", "0.0.0.0:8080", "-t", "public"]
+    && docker-php-ext-install gd pdo pdo_mysql mbstring xml
