--- a/it-pagalbos-biletai/Dockerfile
+++ b/it-pagalbos-biletai/Dockerfile
@@ -1,5 +1,6 @@
 FROM php:8.3-fpm
 
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
     libpng-dev \
     libjpeg-dev \
@@ -12,3 +13,18 @@ RUN apt-get update && apt-get install -y \
     libxml2-dev \
     && docker-php-ext-configure gd --with-freetype --with-jpeg \
     && docker-php-ext-install gd pdo pdo_mysql mbstring xml
+
+# Install Composer
+COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
+
+# Set working directory
+WORKDIR /var/www/html
+
+# Copy project files
+COPY . .
+
+# Install PHP dependencies
+RUN composer install --optimize-autoloader --no-scripts --no-interaction
+
+# Expose Railway port (Railway sets $PORT automatically)
+CMD ["php", "-S", "0.0.0.0:${PORT}", "-t", "public"]
