--- a/it-pagalbos-biletai/Dockerfile
+++ b/it-pagalbos-biletai/Dockerfile
@@ -17,14 +17,12 @@ RUN apt-get update && apt-get install -y \
 # Install Composer
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 
-# Set working directory
 WORKDIR /var/www/html
 
-# Copy project files
 COPY . .
 
-# Install PHP dependencies
 RUN composer install --optimize-autoloader --no-scripts --no-interaction
 
-# Expose Railway port (Railway sets $PORT automatically)
-CMD ["php", "-S", "0.0.0.0:${PORT}", "-t", "public"]
+# Railway sets $PORT automatically
+CMD ["sh", "-c", "php -S 0.0.0.0:$PORT -t public"]
+
