--- a/it-pagalbos-biletai/composer.json
+++ b/it-pagalbos-biletai/composer.json
@@ -9,6 +9,7 @@
         "php": "^8.2",
         "darkaonline/l5-swagger": "^9.0",
         "doctrine/annotations": "^2.0",
+        "firebase/php-jwt": "^6.11",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1"
     },
@@ -75,6 +76,9 @@
         }
     },
     "config": {
+        "audit": {
+            "ignore": ["PKSA-365x-2zjk-pt47"]
+        },
         "optimize-autoloader": true,
         "preferred-install": "dist",
         "sort-packages": true,
